[build-system]
requires = ["setuptools~=66.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel", "sopel.*"]
namespaces = false

[project]
name = "sopel"
version = "8.1.0.dev0"
description = "Simple and extensible IRC bot"
maintainers = [
  { name="dgw" },
  { name="Florian Strzelecki" },
]
authors = [
  { name="dgw" },
  { name="Florian Strzelecki" },
  { name="Sean B. Palmer" },
  { name="Else Powell" },
  { name="Elad Alfassa" },
  { name="Dimitri Molenaars" },
  { name="Michael Yanovich" },
]
readme = "README.rst"
license = { text="EFL-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.8"
dependencies = [
    "xmltodict>=0.12,<0.14",
    "pytz",
    "requests>=2.24.0,<3.0.0",
    "sqlalchemy>=1.4,<1.5",
    "importlib_metadata>=3.6",
    "packaging>=23.2",
    "sopel-help>=0.4.0",
    "typing_extensions>=4.4",  # for @typing.override, added in py3.12
]

[project.urls]
"Homepage" = "https://sopel.chat/"
"Release notes" = "https://sopel.chat/changelog/"
"Documentation" = "https://sopel.chat/docs/"
"Bug Tracker" = "https://github.com/sopel-irc/sopel/issues"
"Donate on Open Collective" = "https://opencollective.com/sopel"
"Donate on GitHub" = "https://github.com/sponsors/sopel-irc"
"Source" = "https://github.com/sopel-irc/sopel"
"Coverage" = "https://coveralls.io/github/sopel-irc/sopel"

[project.scripts]
sopel = "sopel.cli.run:main"
sopel-config = "sopel.cli.config:main"
sopel-plugins = "sopel.cli.plugins:main"

[project.entry-points.pytest11]
pytest-sopel = "sopel.tests.pytest_plugin"

[tool.flake8]
max-line-length = 79
no-accept-encodings = true
type-checking-exempt-modules = "typing"
exclude = [
    ".venv",
    "conftest.py",
    "contrib",
    "docs",
    "env",
]
ignore = [
    # Line length limit. Acceptable (for now).
    "E501",
    # Newline before binary operator. Sometimes this is more readable, e.g. in
    # long arithmetic expressions.
    "W503",
    # Newline after binary operator. Ignored by default (which we want to keep)
    "W504",
    # These are forbidding certain __future__ imports. The future-import plugin
    # has errors both for having and not having them; we want to have these until
    # Sopel no longer supports Python versions that require them.
    "FI58",
    # These would require future imports that are not needed any more on Sopel's
    # oldest supported Python version (3.8).
    "FI10","FI11","FI12","FI13","FI14","FI15","FI16","FI17",
    # We use postponed annotation evaluation
    "TC2",
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
force_sort_within_sections = true
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
multi_line_output = 3
order_by_type = false
split_on_trailing_comma = true
use_parentheses = true

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
show_error_codes = true

[tool.pytest.ini_options]
# NOTE: sopel/ is included here to include dynamically-generated tests
testpaths = ["test", "sopel"]
python_files = "*.py"
addopts = "--tb=short -p no:nose"
norecursedirs = "build contrib"
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]
