[metadata]
name = sopel
version = 6.6.9
description = Simple and extendible IRC bot
author = Elsie Powell
author_email = powell.518@gmail.com
url = https://sopel.chat/
license = Eiffel Forum License, version 2
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false

[flake8]
max-line-length = 79
ignore =
    # These are acceptable (for now). 128 and 127 should be removed eventually.
    E501,E128,E127,
    # These are ignored by default (and we want to keep them ignored)
    W504,
    # These are forbidding certain __future__ imports. The future-import plugin
    # has errors both for having and not having them; we want to have these until
    # Sopel no longer supports Python versions that require them.
    FI50,FI51,FI53,FI54,FI55,
    # These would require future imports that are not needed any more on Sopel's
    # oldest supported Python version (2.7).
    FI12,FI16,FI17,
    # We ignore the error for missing generator_stop because it's only available
    # in Python 3.5+ (switch this to FI55 in the above list when Sopel drops
    # support for Python older than 3.5)
    FI15
    # flake8-future-import doesn't support (as of last update) the "annotations"
    # feature added in Python 3.7, but it should be ignored too when/if this is
    # ever released: https://github.com/xZise/flake8-future-import/pull/19
exclude =
    docs/*,
    env/*,
    contrib/*,
    conftest.py
accept-encodings = utf-8
