[metadata]
name = sopel
version = 7.1.0-dev
description = Simple and extensible IRC bot
long_description = file: README.rst
long_description_content_type = text/x-rst
author = dgw
author_email = dgw@technobabbl.es
url = https://sopel.chat/
license = Eiffel Forum License, version 2
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, <4
packages = find:
zip_safe = false

[options.entry_points]
console_scripts =
    sopel = sopel.cli.run:main
    sopel-config = sopel.cli.config:main
    sopel-plugins = sopel.cli.plugins:main
pytest11 =
    pytest-sopel = sopel.tests.pytest_plugin

[flake8]
max-line-length = 79
application-import-names = sopel
import-order-style = google
ignore =
    # Line length limit. Acceptable (for now).
    E501,
    # Newline before binary operator. Sometimes this is more readable, e.g. in
    # long arithmetic expressions.
    W503,
    # Newline after binary operator. Ignored by default (which we want to keep)
    W504,
    # These are forbidding certain __future__ imports. The future-import plugin
    # has errors both for having and not having them; we want to have these until
    # Sopel no longer supports Python versions that require them.
    FI50,FI51,FI53,FI54,FI55,
    # These would require future imports that are not needed any more on Sopel's
    # oldest supported Python version (2.7).
    FI12,FI16,FI17,
    # We ignore the error for missing generator_stop because it's only available
    # in Python 3.5+ (switch this to FI55 in the above list when Sopel drops
    # support for Python older than 3.5)
    FI15,
    # Ignore "annotations" future import, since it's not available before 3.7
    FI18
exclude =
    docs/*,
    env/*,
    contrib/*,
    conftest.py
accept-encodings = utf-8
